<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tvshow" />

    <item
        android:id="@+id/navigation_favorit"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorite" />

</menu>
