<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.detail.DetailActivity">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/menu_favorite"
        app:showAsAction="always" />
</menu>